--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/dramich/DatUglyApp#readme",
   "dependencies": {
     "express": "^4.13.4",
+    "mongoose": "^4.4.11",
     "node": "0.0.0"
   }
 }
